# Pathway

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  DOCKER_AUDIT.md  DOCKER_DEPLOYMENT.md  LICENSE  README.md  SETUP.md  docker-compose.yml  package.json  pnpm-lock.yaml  start-video-engine.sh
backend/: .env.example  ACCESS_CONTROL.md  Dockerfile  README.md  courses_output.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.mts
frontend/: .env.example  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
shared/: branding.config.js  branding.ts  colors.ts  generate.js  package-lock.json  package.json  tailwind.preset.js  theme.css
video-engine/: .gitignore  README.md  pyproject.toml  run_ffmpeg.py  run_moviepy.py  settings.json  test_cms_connectivity.py  test_slug.py
video-engine/app/: generate_vfx.py  main.py  ui_components.py  workflow.py
video-engine/app/api/: render.py
video-engine/app/scripts/: generate_vfx.py  init_engine.py  list_models.py  test_ffmpeg_overlay.py
video-engine/app/services/: cms.py  downloader.py  krea.py  llm.py  markdown_to_lexical.py  stt.py  tts.py  video_processor.py  video_processor_ffmpeg.py  video_processor_moviepy.py
video-engine/app/utils/: ffmpeg_helper.py  theme_parser.py
video-engine/assets/: theme.css
video-engine/assets/animations/: intro_overlay.webm  outro_overlay.webm  temp_intro.mov  temp_outro_base.mov
video-engine/data/: elevenlabs_models.json  elevenlabs_voices.json  google_models.json  jobs.json  settings.json
video-engine/templates/: default.yaml
(+193 files in other folders)
